トップページのイラストは指定ディレクトリ内のものをランダムに表示

--- a/app/views/top_pages/index.html.slim
+++ b/app/views/top_pages/index.html.slim
@@ -8,10 +8,7 @@ h1
 h2
   | トップ絵
 
-img.top_illust src="/images/top_illust/1.png"
-
-p
-  | じりじりと距離を取ろうとするキョウカちゃんです。
+img.top_illust src=random_top_image_url
 
 h2
   | 便利リンク
