なんでターコイズイヤリングの産地表示ないねん！！！

--- a/app/views/items/show.html.slim
+++ b/app/views/items/show.html.slim
@@ -40,7 +40,7 @@ h2
 - unless @producing_stages.empty?
   = render partial: "partials/stages", locals: {stages: @producing_stages}
 - else
-  | ドロップ情報がありません(area1~8のデータがないのでなので多分そこで落ちてます...)
+  | ドロップ情報がありません(area1~8のデータがないので多分そこで落ちてます...)
 
 h2
   | 以下の装備の素材だよ
